# fastapi-async

./: Dockerfile  README.md  docker-compose.yml  initial_db.py  main.py  pyproject.toml
app/api/: deps.py
app/api/api_v2/: api.py
app/api/api_v2/endpoints/: posts.py  users.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_post.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  post.py  user.py
app/schemas/: __init__.py  post.py  user.py
